--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 <body class="canvas">
 
     <div class="card-container">
-      <div class="card-bg-image">
-  
-      </div>
+      <div class="card-bg-image"></div>
 
       <div class="card-info">
+        <div class="profile-image">
+          <img src="./images/image-victor.jpg" alt="">
+        </div>
         Victor Crest
         26
         London
