--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="./styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
@@ -16,21 +16,22 @@
       <div class="card-bg-image"></div>
 
       <div class="card-info">
-        <div class="profile-image">
+
+        <div class="name-box">
           <img src="./images/image-victor.jpg" alt="">
+          <h1 class="name">Victor Crest <span>26</span></h1>    
+          <h2>London</h2>
+
+          80K
+          Followers
+
+          803K
+          Likes
+
+          1.4K
+          Photos
         </div>
-        Victor Crest
-        26
-        London
-
-        80K
-        Followers
-
-        803K
-        Likes
-
-        1.4K
-        Photos
+        
       </div>
 
     </div>
