--- a/index.html
+++ b/index.html
@@ -16,29 +16,27 @@
       <div class="card-bg-image"></div>
 
       <div class="card-info">
-
         <div class="name-box">
           <img src="./images/image-victor.jpg" alt="">
           <h1 class="name">Victor Crest <span>26</span></h1>    
           <h2>London</h2>
-
-          80K
-          Followers
-
-          803K
-          Likes
-
-          1.4K
-          Photos
         </div>
-        
+        <div class="stat-box">
+          <ul>
+            <li>80K <span>Followers</span></li>
+            <li>803K <span>Likes</span></li>
+            <li>1.4K <span>Photos</span></li>
+          </ul>
+        </div>
       </div>
+
+      
 
     </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Clifford Anderson</a>.
   </div>
 </body>
 </html>
