--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
     </div>
   
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Clifford Anderson</a>.
+    Challenge by 
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
+      Frontend Mentor
+    </a>.
+      Coded by 
+    <a href="https://github.com/cdanderson76">
+      Clifford Anderson
+    </a>.
   </div>
 </body>
 </html>
