removed transition durations on the card, and converted most px units to rem

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body class="canvas">
 
+    <!-- PROFILE CARD -->
     <div class="card-container">
       <div class="card-bg-image"></div>
-
       <div class="card-info">
         <div class="name-box">
-          <img src="./images/image-victor.jpg" alt="">
+          <img src="./images/image-victor.jpg" alt="picture of Victor Crest">
           <h1 class="name">Victor Crest <span>26</span></h1>    
           <h2>London</h2>
         </div>
@@ -29,11 +29,9 @@
           </ul>
         </div>
       </div>
-
-      
-
     </div>
   
+    <!-- FOOTER -->
   <div class="attribution">
     Challenge by 
     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
@@ -42,7 +40,7 @@
       Coded by 
     <a href="https://github.com/cdanderson76">
       Clifford Anderson
-    </a>.
+    </a>
   </div>
 </body>
 </html>
