--- a/index.html
+++ b/index.html
@@ -11,25 +11,26 @@
 </head>
 
 <body class="canvas">
-
-    <!-- PROFILE CARD -->
-    <div class="card-container">
-      <div class="card-bg-image"></div>
-      <div class="card-info">
-        <div class="name-box">
-          <img src="./images/image-victor.jpg" alt="picture of Victor Crest">
-          <h1 class="name">Victor Crest <span>26</span></h1>    
-          <h2>London</h2>
-        </div>
-        <div class="stat-box">
-          <ul>
-            <li>80K <span>Followers</span></li>
-            <li>803K <span>Likes</span></li>
-            <li>1.4K <span>Photos</span></li>
-          </ul>
+    <main>
+      <!-- PROFILE CARD -->
+      <div class="card-container">
+        <div class="card-bg-image"></div>
+        <div class="card-info">
+          <div class="name-box">
+            <img src="./images/image-victor.jpg" alt="picture of Victor Crest">
+            <h1 class="name">Victor Crest <span>26</span></h1>    
+            <h2>London</h2>
+          </div>
+          <div class="stat-box">
+            <ul>
+              <li>80K <span>Followers</span></li>
+              <li>803K <span>Likes</span></li>
+              <li>1.4K <span>Photos</span></li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
+    </main>
   
     <!-- FOOTER -->
   <div class="attribution">
