--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </main>
   
     <!-- FOOTER -->
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by 
     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
       Frontend Mentor
@@ -42,6 +42,6 @@
     <a href="https://github.com/cdanderson76">
       Clifford Anderson
     </a>
-  </div>
+  </footer>
 </body>
 </html>
