--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body class="canvas">
     <main>
       <!-- PROFILE CARD -->
-      <div class="card-container">
+      <section class="card-container">
         <div class="card-bg-image"></div>
-        <div class="card-info">
-          <div class="name-box">
+        <section class="card-info">
+          <section class="name-box">
             <img src="./images/image-victor.jpg" alt="picture of Victor Crest">
             <h1 class="name">Victor Crest <span>26</span></h1>    
             <h2>London</h2>
-          </div>
+          </section>
           <div class="stat-box">
             <ul>
               <li>80K <span>Followers</span></li>
@@ -28,8 +28,8 @@
               <li>1.4K <span>Photos</span></li>
             </ul>
           </div>
-        </div>
-      </div>
+        </section>
+      </section>
     </main>
   
     <!-- FOOTER -->
